opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/tracing"
bug-reports: "https://github.com/janestreet/tracing/issues"
dev-repo: "git+https://github.com/janestreet/tracing.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/tracing/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_unix"
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "cohttp"       {>= "2.5.6"}
  "cohttp-async" {>= "2.5.7" & < "3.0.0" | >= "5.1.1" & < "6.0.0"}
  "dune"         {>= "3.11.0"}
  "uri"          {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Tracing library"
description: "
Utilities for creating and parsing traces in Fuchsia Trace Format.
"
